Fixed the overflow

--- a/PricingTable/TableRedesign/css/component.css
+++ b/PricingTable/TableRedesign/css/component.css
@@ -24,6 +24,7 @@ body{
 	justify-content: center;
 	-webkit-align-items: center;
 	align-items: center;
+    overflow-x: hidden;
 }
 
 .pricing-section {
